[gd_scene load_steps=6 format=2]

[ext_resource path="res://Juego/UI/HUD/BarraSalud.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/Naves/NaveBase.gd" type="Script" id=2]
[ext_resource path="res://Juego/Proyectiles/Canion.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/Proyectiles/ProyectilJugador.tscn" type="PackedScene" id=5]
[ext_resource path="res://Juego/Naves/Jugador/recibir_da√±o.wav" type="AudioStream" id=8]

[node name="NaveBase" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
gravity_scale = 0.0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )

[node name="Canion" parent="." instance=ExtResource( 3 )]
proyectil = ExtResource( 5 )

[node name="ImpactoDanio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="BarraSalud" parent="." instance=ExtResource( 1 )]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
